...
    }
    
    @objc func searchTapped() {
        let ac = UIAlertController(title: "Filter...", message: nil, preferredStyle: .alert)
        ac.addTextField { (textField) in
            self.filterTextField = textField
            self.filterTextField.placeholder = "Filter"
            self.filterTextField.delegate = self
            
            // Block the user from entering empty string by disabling the button:
            NotificationCenter.default.addObserver(forName: UITextField.textDidChangeNotification, object: self.filterTextField, queue: OperationQueue.main) { (notification) in
                
                if self.filterTextField.text!.isEmpty {
...
            }
        }
        
        ac.addAction(filterButton)
        filterButton.isEnabled = false
        
        ac.addAction(UIAlertAction(title: "Cancel", style: .cancel))
        
        present(ac, animated: true)
    }
    
    func showNoResultsAlert() {
        let ac = UIAlertController(title: "No results found!", message: "Try again", preferredStyle: .alert)
...
