...
    }
    
    @objc func searchText() {
           let ac = UIAlertController(title: "What are you looking for?", message: nil, preferredStyle: .alert)
           ac.addTextField()
           
            let searchPrompt = UIAlertAction(title: "Search", style: .default) {
            [weak self, weak ac] _ in
                       guard let text = ac?.textFields?[0].text else { return }
                       self?.submit(text)
            }
        let cancelPrompt = UIAlertAction(title: "Cancel", style: .cancel)
        
...
